{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 172,
  "lineage": "1cab7e2b-41e4-73eb-cef6-cd92f35f55fd",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:063212612232:security-group/sg-099085d49fc2773e8",
            "description": "Cluster security group for EKS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-099085d49fc2773e8",
            "ingress": [],
            "name": "my-eks-app-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "063212612232",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-eks-app-eks-cluster-sg",
              "Project": "my-eks-app"
            },
            "tags_all": {
              "Name": "my-eks-app-eks-cluster-sg",
              "Project": "my-eks-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7f079dabd31a62e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f22d4eb544cead8d",
            "arn": "arn:aws:ec2:eu-west-1:063212612232:elastic-ip/eipalloc-0f22d4eb544cead8d",
            "association_id": "eipassoc-05dbf3e1064126504",
            "domain": "vpc",
            "id": "eipalloc-0f22d4eb544cead8d",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-066fa2aba8237d6cd",
            "private_dns": "ip-10-0-1-139.eu-west-1.compute.internal",
            "private_ip": "10.0.1.139",
            "public_dns": "ec2-46-137-24-225.eu-west-1.compute.amazonaws.com",
            "public_ip": "46.137.24.225",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-eks-app-nat-eip-0",
              "Project": "my-eks-app"
            },
            "tags_all": {
              "Name": "my-eks-app-nat-eip-0",
              "Project": "my-eks-app"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091726ed979cdf1f5",
            "arn": "arn:aws:ec2:eu-west-1:063212612232:elastic-ip/eipalloc-091726ed979cdf1f5",
            "association_id": "eipassoc-0faa329906d6ecbd9",
            "domain": "vpc",
            "id": "eipalloc-091726ed979cdf1f5",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0f7021ab35f500f75",
            "private_dns": "ip-10-0-2-55.eu-west-1.compute.internal",
            "private_ip": "10.0.2.55",
            "public_dns": "ec2-52-210-91-129.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.210.91.129",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-eks-app-nat-eip-1",
              "Project": "my-eks-app"
            },
            "tags_all": {
              "Name": "my-eks-app-nat-eip-1",
              "Project": "my-eks-app"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:063212612232:internet-gateway/igw-02b99a8eef0ab4f87",
            "id": "igw-02b99a8eef0ab4f87",
            "owner_id": "063212612232",
            "tags": {
              "Name": "my-eks-app-igw",
              "Project": "my-eks-app"
            },
            "tags_all": {
              "Name": "my-eks-app-igw",
              "Project": "my-eks-app"
            },
            "vpc_id": "vpc-0d7f079dabd31a62e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f22d4eb544cead8d",
            "association_id": "eipassoc-05dbf3e1064126504",
            "connectivity_type": "public",
            "id": "nat-02c157f6196ab48be",
            "network_interface_id": "eni-066fa2aba8237d6cd",
            "private_ip": "10.0.1.139",
            "public_ip": "46.137.24.225",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-074d82f30214ef4b4",
            "tags": {
              "Name": "my-eks-app-nat-gateway-0",
              "Project": "my-eks-app"
            },
            "tags_all": {
              "Name": "my-eks-app-nat-gateway-0",
              "Project": "my-eks-app"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091726ed979cdf1f5",
            "association_id": "eipassoc-0faa329906d6ecbd9",
            "connectivity_type": "public",
            "id": "nat-0ac291c566c2a2085",
            "network_interface_id": "eni-0f7021ab35f500f75",
            "private_ip": "10.0.2.55",
            "public_ip": "52.210.91.129",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00d1f843ff167445e",
            "tags": {
              "Name": "my-eks-app-nat-gateway-1",
              "Project": "my-eks-app"
            },
            "tags_all": {
              "Name": "my-eks-app-nat-gateway-1",
              "Project": "my-eks-app"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:063212612232:route-table/rtb-08c7ab4016d44bb8d",
            "id": "rtb-08c7ab4016d44bb8d",
            "owner_id": "063212612232",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02c157f6196ab48be",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-eks-app-private-rt-0",
              "Project": "my-eks-app"
            },
            "tags_all": {
              "Name": "my-eks-app-private-rt-0",
              "Project": "my-eks-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7f079dabd31a62e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:063212612232:route-table/rtb-0cc60dae03f663891",
            "id": "rtb-0cc60dae03f663891",
            "owner_id": "063212612232",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ac291c566c2a2085",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-eks-app-private-rt-1",
              "Project": "my-eks-app"
            },
            "tags_all": {
              "Name": "my-eks-app-private-rt-1",
              "Project": "my-eks-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7f079dabd31a62e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:063212612232:route-table/rtb-0ce2fddec2c4fda8b",
            "id": "rtb-0ce2fddec2c4fda8b",
            "owner_id": "063212612232",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02b99a8eef0ab4f87",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-eks-app-public-rt",
              "Project": "my-eks-app"
            },
            "tags_all": {
              "Name": "my-eks-app-public-rt",
              "Project": "my-eks-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7f079dabd31a62e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c89d4b73531f6cd7",
            "route_table_id": "rtb-08c7ab4016d44bb8d",
            "subnet_id": "subnet-013f71b43b54c3f6b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03245dd9dc8347403",
            "route_table_id": "rtb-0cc60dae03f663891",
            "subnet_id": "subnet-03b51d6f7ce4277df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001d59168fabd1aab",
            "route_table_id": "rtb-0ce2fddec2c4fda8b",
            "subnet_id": "subnet-074d82f30214ef4b4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acefed8c6d3863fd",
            "route_table_id": "rtb-0ce2fddec2c4fda8b",
            "subnet_id": "subnet-00d1f843ff167445e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:063212612232:subnet/subnet-013f71b43b54c3f6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013f71b43b54c3f6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "063212612232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-app-private-subnet-0",
              "Project": "my-eks-app",
              "kubernetes.io/cluster/my-eks-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "my-eks-app-private-subnet-0",
              "Project": "my-eks-app",
              "kubernetes.io/cluster/my-eks-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d7f079dabd31a62e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:063212612232:subnet/subnet-03b51d6f7ce4277df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b51d6f7ce4277df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "063212612232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-app-private-subnet-1",
              "Project": "my-eks-app",
              "kubernetes.io/cluster/my-eks-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "my-eks-app-private-subnet-1",
              "Project": "my-eks-app",
              "kubernetes.io/cluster/my-eks-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d7f079dabd31a62e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:063212612232:subnet/subnet-074d82f30214ef4b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074d82f30214ef4b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "063212612232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-app-public-subnet-0",
              "Project": "my-eks-app",
              "kubernetes.io/cluster/my-eks-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "my-eks-app-public-subnet-0",
              "Project": "my-eks-app",
              "kubernetes.io/cluster/my-eks-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d7f079dabd31a62e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:063212612232:subnet/subnet-00d1f843ff167445e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d1f843ff167445e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "063212612232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-app-public-subnet-1",
              "Project": "my-eks-app",
              "kubernetes.io/cluster/my-eks-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "my-eks-app-public-subnet-1",
              "Project": "my-eks-app",
              "kubernetes.io/cluster/my-eks-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d7f079dabd31a62e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:063212612232:vpc/vpc-0d7f079dabd31a62e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0311143710a0ba17e",
            "default_route_table_id": "rtb-05c4dc722011ee8b9",
            "default_security_group_id": "sg-02b2a95a0061d6dab",
            "dhcp_options_id": "dopt-00470147488639e64",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d7f079dabd31a62e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05c4dc722011ee8b9",
            "owner_id": "063212612232",
            "tags": {
              "Name": "my-eks-app-vpc",
              "Project": "my-eks-app"
            },
            "tags_all": {
              "Name": "my-eks-app-vpc",
              "Project": "my-eks-app"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}